--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Contact - Active Bootstrap Template</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Desarrollo Web para Creativos Flat Latte</title>
+    <meta name="description" content="Desarrollo Web para Emprendedores Creativos y Artistas">
+    <meta name="keywords" content="Desarrollo Web Emprendedores Creativos Artistas Musicos Diseñadores">
 
     <!-- Favicons -->
     <link href="/favicon/favicon.ico" rel="icon">
     <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=family=family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <!-- Vendor CSS Files -->
-    <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
+    <!-- CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
-    <!-- Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body class="contact-page">
@@ -48,7 +33,7 @@
         </a>
   
         <div class="navmenu">
-          <a class="btn-nav" href="contact.html">flat latte</a>
+          <a class="btn-nav px-0" href="index.html">flat latte</a>
         </div>
   
       </div>
@@ -60,18 +45,17 @@
         <div class="container" data-aos="fade">
           <div class="row justify-content-center">
             <div class="col-12 col-lg-10 text-center">
-              <div class="">
+              <div class="mb-5">
                 <h1>Vamos a prepararte un buen sitio ☕</h1>
-                <p class="col-xl-8 mx-auto">
+                <p class="col-xl-8 mx-auto my-3">
                   Cuéntame sobre tu proyecto y agendemos una videollamada. Solemos responder en menos de 24 horas.
                 </p>
               </div>
               <div class="col-lg-8 m-2 mx-auto">
                 <form
-                action="forms/contact.php"
+                action=""
                 method="post"
                 role="form"
-                class="php-email-form"
               >
                 <div class="row">
                     <div class="col-lg-6 form-group">
@@ -99,6 +83,7 @@
                     <textarea
                       class="form-control"
                       name="message"
+                      rows="8"
                       placeholder="Cuéntame sobre tu proyecto"
                       required=""
                     ></textarea>
@@ -114,13 +99,10 @@
               <div class="text-center">
                 <h2 class="mb-4">¿Prefieres algo más rápido?</h2>
                 <div>
-                  <a class="btn-get-started d-flex d-sm-none justify-content-center align-items-center" href="#">
-                    <span class="bi bi-whatsapp me-2 fs-3"></span>WhatsApp
-                  </a>
-                </div>
-                <div class="w-50 mx-auto">
-                  <a class="btn-get-started d-none d-sm-flex justify-content-center align-items-center" href="#">
-                    <span class="bi bi-whatsapp me-2 fs-3"></span>Escríbeme por WhatsApp
+                  <a class="btn-get-started d-inline-flex justify-content-center align-items-center" href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&" target="_blank">
+                    <i class="bi bi-whatsapp me-2 fs-3"></i>
+                    <span class="d-flex d-sm-none">WhatsApp</span>
+                    <span class="d-none d-sm-block">Escríbeme por WhatsApp</span>
                   </a>
                 </div>
                 
@@ -136,19 +118,24 @@
 
     <footer id="footer" class="footer light-background">
       <div class="container">
+        <div class="text-center">
+          <p>Hecho con café y código.</p>
+        </div>
   
         <div class="text-center">
-          
           <ul class="list-unstyled d-flex fs-4 mb-3 justify-content-center">
             <li>
-              <a href="#"><span class="bi bi-whatsapp m-2"></span></a>
+              <a href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&" target="_blank">
+                <i class="bi bi-whatsapp m-2"></i></a>
             </li>
             <li>
-              <a href="#"><span class="bi bi-instagram m-2"></span></a>
+              <a href="https://www.instagram.com/flat.latte/" target="_blank">
+                <i class="bi bi-instagram m-2"></i></a>
             </li>
             <li>
             <li>
-              <a href="#"><span class="bi bi-youtube m-2"></span></a>
+              <a href="https://www.youtube.com/@flatlatte" target="_blank">
+                <i class="bi bi-youtube m-2"></i></a>
             </li>
           </ul>
         </div>
@@ -166,17 +153,9 @@
     <!-- Preloader -->
     <div id="preloader"></div>
 
-    <!-- Vendor JS Files -->
+    <!-- JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-
-    <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
