--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Flat Latte</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Desarrollo Web para Creativos Flat Latte</title>
+  <meta name="description" content="Desarrollo Web para Emprendedores Creativos y Artistas">
+  <meta name="keywords" content="Desarrollo Web Emprendedores Creativos Artistas Musicos Diseñadores">
 
   <!-- Favicons -->
   <link href="/favicon/favicon.ico" rel="icon">
@@ -21,8 +21,6 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
@@ -150,23 +148,23 @@
     <section id="about" class="about section">
       <div class="container">
         <div class="row justify-content-start">
-          <div class="col-lg-8 order-lg-1 d-flex flex-column">
-            <!-- <span class="section-subtitle" data-aos="fade-up">Sobre nosotros</span> -->
+          <div class="col-lg-8 mb-5 mb-lg-0 order-2 order-lg-1 d-flex flex-column">
+      
             <h1 class="lh-sm my-lg-4" data-aos="fade-up">Sigue creando</h1>
-            <p class="col-lg-10 mb-4" data-aos="fade-up">
+            <p class="col-lg-11 mb-4" data-aos="fade-up">
               Músicos, fotógrafos, tatuadores, artesanos, diseñadores, escritores... tenemos algo en común: <b>¡nos encanta crear!.</b>
             </p>
   
-            <p class="col-lg-10 justify-content-center" data-aos="fade-up">
+            <p class="col-lg-11" data-aos="fade-up">
               En Flat Latte, sabemos que cada minuto que pasas lidiando con lo técnico es un minuto menos haciendo lo que disfrutas. Por eso, ayudamos a emprendedores creativos como tú, a construir una presencia digital auténtica, que conecte con tu audiencia y haga crecer tu proyecto sin complicaciones.
             </p>
 
             <p class="mt-5" data-aos="fade-up">
-              <a href="#" class="btn btn-get-started">Hagamos equipo</a>
+              <a href="contact.html" class="btn btn-get-started">Hagamos equipo</a>
             </p>
 
           </div>
-          <div class="col-lg-4 imagen-about order-lg-2"></div>
+          <div class="col-lg-4 imagen-about mb-5 mb-lg-0 order-1 order-lg-2"></div>
         </div>
       </div>
     </section><!-- /About Section -->
@@ -243,16 +241,16 @@
       <div class="container bg-light-subtle">
         <div class="row" data-aos="fade-up">
 
-          <div class="imagen-whyUs col-12 col-sm-12 col-lg-4 my-4"></div>
+          <div class="imagen-whyUs col-12 col-sm-12 col-lg-4"></div>
 
-          <div class="col-12 col-sm-12 col-lg-8 my-md-2">
-            <div class="">
-              <h1 class="lh-sm my-5 my-lg-4 text-center text-lg-start" data-aos="fade-up">
-                Un flat latte bien cargado incluye
+          <div class="col-12 col-sm-12 col-lg-8 my-md-2 d-lg-flex flex-lg-column align-items-center">
+            <div class="col-lg-11">
+              <h1 class="lh-sm my-5 my-lg-4 text-center text-md-start" data-aos="fade-up">
+                Un flat latte bien cargado incluye:
               </h1>
             </div>
 
-            <div class="whyUs-item d-flex align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="">
+            <div class="whyUs-item d-flex col-lg-11 align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="">
               <div class="fs-2 me-3 me-sm-4">
                 <i class="bi bi-check2-circle"></i>
               </div>
@@ -261,7 +259,7 @@
               </div>
             </div>
 
-            <div class="whyUs-item d-flex align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+            <div class="whyUs-item d-flex col-lg-11 align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
               <div class="fs-2 me-3 me-sm-4">
                 <i class="bi bi-check2-circle"></i>
               </div>
@@ -269,7 +267,7 @@
                 <p class="mb-1">Más visibilidad, más clientes.</p>
               </div>
             </div>
-            <div class="whyUs-item d-flex align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+            <div class="whyUs-item d-flex col-lg-11 align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
               <div class="fs-2 me-3 me-sm-4">
                 <i class="bi bi-check2-circle"></i>
               </div>
@@ -278,7 +276,7 @@
               </div>
             </div>
 
-            <div class="whyUs-item d-flex align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+            <div class="whyUs-item d-flex col-lg-11 align-items-center mb-3 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
               <div class="fs-2 me-3 me-sm-4">
                 <i class="bi bi-check2-circle"></i>
               </div>
@@ -287,7 +285,7 @@
               </div>
             </div>
 
-            <div class="whyUs-item d-flex align-items-center mb-5 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+            <div class="whyUs-item d-flex col-lg-11 align-items-center mb-5 px-1 py-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
               <div class="fs-2 me-3 me-sm-4">
                 <i class="bi bi-check2-circle"></i>
               </div>
@@ -318,7 +316,7 @@
         </div>
 
         <div>
-          <div class="row gy-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4" data-aos="fade-right" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item">
               <!-- Proyecto Item-->
@@ -336,7 +334,7 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      <iframe src="https://www.spanishwithmonse.com/" class="example-website" frameborder="0" allowfullscreen></iframe> 
+                      <iframe src="" class="example-website" frameborder="0" allowfullscreen></iframe> 
                     </div>
                     <div class="modal-footer"></div>
                   </div>
@@ -462,16 +460,13 @@
 
                 </div>
 
-                <div class="col-lg-12 mt-5">
-                  <!-- Button trigger modal -->
-                  <button type="button" class="btn btn-get-started d-block mx-auto" data-bs-toggle="modal" data-bs-target="#socioForm" data-aos="fade-up">
+                <div class="col-lg-12 mt-5 text-center">
+                  <a class="btn btn-get-started" href="contact.html" data-aos="fade-up">
                     Empezar ahora
-                  </button>
-
+                  </a>
                 </div>
 
-
-              </div> <!-- /Como me registro -->
+              </div> 
 
             </div>
 
@@ -496,12 +491,12 @@
               <div class="accordion-item">
                 <p class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-1">
-                    ¿Cuánto tiempo tarda en completarse un proyecto?
+                    ¿Qué tipo de sitios web hacen?
                   </button>
                 </p>
                 <div id="collapse-faq-1" class="collapse" aria-labelledby="headingOne" data-parent="#accordion-faq">
                   <div class="accordion-body">
-                    El tiempo varía según la complejidad, pero en promedio, de 2 a 4 semanas.
+                    Trabajamos principalmente con creativos, emprendedores y artistas, por lo que hacemos portafolios, tiendas en línea, blogs, sistemas de reservas, venta de cursos y más.
                   </div>
                 </div>
               </div>
@@ -510,12 +505,54 @@
               <div class="accordion-item">
                 <p class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-2">
-                    ¿Puedo personalizar los precios cuando ofrezco desarrollo web a mis clientes?
+                    ¿Qué incluye el mantenimiento y soporte técnico?
                   </button>
                 </p>
                 <div id="collapse-faq-2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-faq">
                   <div class="accordion-body">
-                    ¡Claro! Nos aseguramos de que tengas el control para añadir tu margen de ganancia.
+                    Nos encargamos de actualizaciones, seguridad, resolución de problemas y ajustes técnicos para que tu sitio funcione sin interrupciones. También podemos ser tu equipo de IT y ayudarte con temas técnicos más allá del sitio web.
+                  </div>
+                </div>
+              </div>
+              <!-- .accordion-item -->
+
+              <div class="accordion-item">
+                <p class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-3">
+                    ¿Puedo ofrecer sitios web a mis clientes sin saber programar?
+                  </button>
+                </p>
+                <div id="collapse-faq-3" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-faq">
+                  <div class="accordion-body">
+                    Sí. Si eres diseñador o creativo y quieres sumar desarrollo web a tus servicios, nosotros nos encargamos de la parte técnica mientras tú te enfocas en el diseño y la relación con el cliente.
+                  </div>
+                </div>
+              </div>
+              <!-- .accordion-item -->
+
+              <div class="accordion-item">
+                <p class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-4">
+                    ¿Cuánto tiempo toma crear un sitio web?
+                  </button>
+                </p>
+                <div id="collapse-faq-4" class="collapse" aria-labelledby="headingFour" data-parent="#accordion-faq">
+                  <div class="accordion-body">
+                    Depende de la complejidad, pero en general, los proyectos básicos toman de 2 a 4 semanas.
+                  </div>
+                </div>
+              </div>
+              <!-- .accordion-item -->
+
+              <div class="accordion-item">
+                <p class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-5">
+                    ¿Puedo vender mis productos o servicios en mi sitio?
+                  </button>
+                </p>
+                <div id="collapse-faq-5" class="collapse" aria-labelledby="headingFive" data-parent="#accordion-faq">
+                  <div class="accordion-body">
+                    ¡Claro! Podemos integrar una tienda online o botones de pago según lo que necesites.
                   </div>
                 </div>
             </div>
@@ -523,14 +560,14 @@
 
             <div class="accordion-item">
               <p class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-3">
-                  ¿Qué información necesito enviarles para iniciar un proyecto?
+                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-6">
+                  ¿Qué pasa si necesito cambios en el futuro?
                 </button>
               </p>
 
-              <div id="collapse-faq-3" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-faq">
+              <div id="collapse-faq-6" class="collapse" aria-labelledby="headingSix" data-parent="#accordion-faq">
                 <div class="accordion-body">
-                  Te proporcionamos un documento de briefing para que reúnas toda la información clave de tu cliente. Con eso, comenzamos a desarrollar el sitio.
+                  Podemos hacerlos por ti o enseñarte a manejarlos con facilidad.
                 </div>
               </div>
             </div>
@@ -538,14 +575,14 @@
 
             <div class="accordion-item">
               <p class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-4">
-                  ¿Puedo añadir módulos adicionales después de iniciado el proyecto?
+                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-7">
+                  ¿Cuánto cuesta?
                 </button>
               </p>
 
-              <div id="collapse-faq-4" class="collapse" aria-labelledby="headingFour" data-parent="#accordion-faq">
+              <div id="collapse-faq-7" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion-faq">
                 <div class="accordion-body">
-                 ¡Sin problema! Nuestro sistema modular permite agregar nuevas funcionalidades en cualquier etapa del desarrollo.
+                  El costo depende del tipo de sitio y funciones que necesites. Escríbenos y te ayudamos a elegir la mejor opción según tu presupuesto.
                 </div>
               </div>
             </div>
@@ -553,12 +590,12 @@
 
             <div class="accordion-item">
               <p class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-5">
+                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-8">
                   ¿Es posible cambiar el diseño después de que el sitio esté en producción?
                 </button>
               </p>
 
-              <div id="collapse-faq-5" class="collapse" aria-labelledby="headingFive" data-parent="#accordion-faq">
+              <div id="collapse-faq-8" class="collapse" aria-labelledby="headingEight" data-parent="#accordion-faq">
                 <div class="accordion-body">
                   Sí, ofrecemos revisiones para asegurar que el diseño final cumpla con las expectativas de tu cliente. Cambios mayores pueden tener un costo adicional.
                 </div>
@@ -568,11 +605,11 @@
 
             <div class="accordion-item">
               <p class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-6">
+                <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-faq-9">
                   ¿El sitio web será totalmente compatible con dispositivos móviles? 
                </button>
               </p>
-              <div id="collapse-faq-6" class="collapse" aria-labelledby="headingSix" data-parent="#accordion-faq">
+              <div id="collapse-faq-9" class="collapse" aria-labelledby="headingNine" data-parent="#accordion-faq">
                 <div class="accordion-body">
                   Absolutamente. Todos nuestros sitios web están diseñados para ser completamente responsivos y adaptarse a cualquier dispositivo.
                 </div>
@@ -647,14 +684,17 @@
       <div class="text-center">
         <ul class="list-unstyled d-flex fs-4 mb-3 justify-content-center">
           <li>
-            <a href="#"><span class="bi bi-whatsapp m-2"></span></a>
+            <a href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&" target="_blank">
+              <i class="bi bi-whatsapp m-2"></i></a>
           </li>
           <li>
-            <a href="#"><span class="bi bi-instagram m-2"></span></a>
+            <a href="https://www.instagram.com/flat.latte/" target="_blank">
+              <i class="bi bi-instagram m-2"></i></a>
           </li>
           <li>
           <li>
-            <a href="#"><span class="bi bi-youtube m-2"></span></a>
+            <a href="https://www.youtube.com/@flatlatte" target="_blank">
+              <i class="bi bi-youtube m-2"></i></a>
           </li>
         </ul>
       </div>
@@ -669,13 +709,7 @@
 
   <!-- JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
