fix favicon and googlefonts url

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="keywords" content="Desarrollo Web Emprendedores Creativos Artistas Musicos Diseñadores">
 
   <!-- Favicons -->
-  <link href="/favicon/favicon.ico" rel="icon">
-  <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="./favicon/favicon.ico" rel="icon">
+  <link href="./favicon/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=family=family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
