fix spelling issues

--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Desarrollo Web para Creativos Flat Latte</title>
-    <meta name="description" content="Desarrollo Web para Emprendedores Creativos y Artistas">
-    <meta name="keywords" content="Desarrollo Web Emprendedores Creativos Artistas Musicos Diseñadores">
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Contacto Flat Latte Desarrollo Web para Creativos</title>
+    <meta
+      name="description"
+      content="Desarrollo Web para Emprendedores Creativos y Artistas"
+    />
+    <meta
+      name="keywords"
+      content="Desarrollo Web Emprendedores Creativos Artistas Musicos Diseñadores"
+    />
 
     <!-- Favicons -->
-    <link href="./favicon/favicon.ico" rel="icon">
-    <link href="./favicon/apple-touch-icon.png" rel="apple-touch-icon">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
-
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body class="contact-page">
     <header id="header" class="header d-flex align-items-center sticky-top">
-      <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-  
+      <div
+        class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"
+      >
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="./assets/img/logo-black-a.png" alt="logo flat latte mug">
+          <img src="./assets/img/logo-black-a.png" alt="logo flat latte mug" />
         </a>
-  
+
         <div class="navmenu">
           <a class="btn-nav px-0" href="index.html">flat latte</a>
         </div>
-  
       </div>
     </header>
 
@@ -48,16 +62,17 @@
               <div class="mb-5">
                 <h1>Vamos a prepararte un buen sitio ☕</h1>
                 <p class="col-xl-8 mx-auto my-3">
-                  Cuéntame sobre tu proyecto y agendemos una videollamada. Solemos responder en menos de 24 horas.
+                  Cuéntame sobre tu proyecto y agendemos una videollamada.
+                  Solemos responder en menos de 24 horas.
                 </p>
               </div>
               <div class="col-lg-8 m-2 mx-auto">
                 <form
-                action=""
-                method="post"
-                role="form"
-              >
-                <div class="row">
+                  action="https://formspree.io/f/mzzdjwqv"
+                  method="POST"
+                  role="form"
+                >
+                  <div class="row">
                     <div class="col-lg-6 form-group">
                       <input
                         type="text"
@@ -89,7 +104,7 @@
                     ></textarea>
                   </div>
                   <div class="text-center mt-3">
-                    <a class="btn-fill" type="submit">Enviar</a>
+                    <button class="btn-fill" type="submit">Enviar</button>
                   </div>
                 </form>
               </div>
@@ -99,17 +114,20 @@
               <div class="text-center">
                 <h2 class="mb-4">¿Prefieres algo más rápido?</h2>
                 <div>
-                  <a class="btn-get-started d-inline-flex justify-content-center align-items-center" href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&" target="_blank">
+                  <a
+                    class="btn-get-started d-inline-flex justify-content-center align-items-center"
+                    href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&"
+                    target="_blank"
+                  >
                     <i class="bi bi-whatsapp me-2 fs-3"></i>
                     <span class="d-flex d-sm-none">WhatsApp</span>
-                    <span class="d-none d-sm-block">Escríbeme por WhatsApp</span>
+                    <span class="d-none d-sm-block"
+                      >Escríbeme por WhatsApp</span
+                    >
                   </a>
                 </div>
-                
               </div>
-              
             </div>
-
           </div>
         </div>
       </section>
@@ -121,21 +139,27 @@
         <div class="text-center">
           <p>Hecho con café y código.</p>
         </div>
-  
+
         <div class="text-center">
           <ul class="list-unstyled d-flex fs-4 mb-3 justify-content-center">
             <li>
-              <a href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&" target="_blank">
-                <i class="bi bi-whatsapp m-2"></i></a>
+              <a
+                href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&"
+                target="_blank"
+              >
+                <i class="bi bi-whatsapp m-2"></i
+              ></a>
             </li>
             <li>
               <a href="https://www.instagram.com/flat.latte/" target="_blank">
-                <i class="bi bi-instagram m-2"></i></a>
+                <i class="bi bi-instagram m-2"></i
+              ></a>
             </li>
-            <li>
+            <li></li>
             <li>
               <a href="https://www.youtube.com/@flatlatte" target="_blank">
-                <i class="bi bi-youtube m-2"></i></a>
+                <i class="bi bi-youtube m-2"></i
+              ></a>
             </li>
           </ul>
         </div>
