add new page for portfolio items

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Flat Latte Desarrollo Web para Creativos </title>
+    <title>Flat Latte Desarrollo Web para Creativos</title>
     <meta
       name="description"
       content="Desarrollo Web para Emprendedores Creativos y Artistas"
@@ -20,20 +20,12 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"
     />
 
     <!-- CSS Files -->
-    <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
@@ -402,154 +394,45 @@
             <div class="row gy-4" data-aos="fade-right" data-aos-delay="200">
               <div class="col-lg-4 col-md-6 portfolio-item">
                 <!-- Proyecto Item-->
-                <div
-                  class="portfolio-img"
-                  data-bs-toggle="modal"
-                  data-bs-target="#staticBackdrop"
-                >
+                <div>
                   <!-- imagen portada portafolio -->
-                  <img
-                    src="assets/img/portfolio/swmonse-2.jpg"
-                    class="img-fluid portfolio-bw-color"
-                    alt=""
-                  />
+                  <a href="./portfolio/swmonse.html">
+                    <img
+                      src="assets/img/portfolio/swmonse-2.jpg"
+                      class="img-fluid portfolio-bw-color"
+                      alt=""
+                    />
+                  </a>
                 </div>
-
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="staticBackdrop"
-                  tabindex="-1"
-                  aria-labelledby="staticBackdropLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog modal-xl portfolio-modal">
-                    <div class="modal-content h-100">
-                      <div class="modal-header">
-                        <h1
-                          class="modal-title fs-5"
-                          id="staticBackdropLabel"
-                        ></h1>
-                        <button
-                          type="button"
-                          class="btn-close"
-                          data-bs-dismiss="modal"
-                          aria-label="Close"
-                        ></button>
-                      </div>
-                      <div class="modal-body">
-                        <iframe
-                          src="https://www.spanishwithmonse.com/"
-                          class="example-website"
-                          frameborder="0"
-                          allowfullscreen
-                        ></iframe>
-                      </div>
-                      <div class="modal-footer"></div>
-                    </div>
-                  </div>
-                </div>
-                <!-- / End Button trigger modal -->
               </div>
               <!-- End Proyecto Item -->
               <!-- Proyecto Item-->
               <div class="col-lg-4 col-md-6 portfolio-item">
-                <div
-                  class="portfolio-img"
-                  data-bs-toggle="modal"
-                  data-bs-target="#himnapp"
-                >
+                <div>
                   <!-- imagen portada portafolio -->
-                  <img
-                    src="assets/img/portfolio/himnapp-2.jpg"
-                    class="img-fluid portfolio-bw-color"
-                    alt=""
-                  />
+                  <a href="./portfolio/himnapp.html">
+                    <img
+                      src="assets/img/portfolio/himnapp-2.jpg"
+                      class="img-fluid portfolio-bw-color"
+                      alt=""
+                    />
+                  </a>
                 </div>
-
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="himnapp"
-                  tabindex="-1"
-                  aria-labelledby="himnappLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog modal-xl portfolio-modal">
-                    <div class="modal-content h-100">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="himnappLabel"></h1>
-                        <button
-                          type="button"
-                          class="btn-close"
-                          data-bs-dismiss="modal"
-                          aria-label="Close"
-                        ></button>
-                      </div>
-                      <div class="modal-body">
-                        <iframe
-                          src="https://vianydev.github.io/himnapp/"
-                          class="example-website"
-                          frameborder="0"
-                          allowfullscreen
-                        ></iframe>
-                      </div>
-                      <div class="modal-footer"></div>
-                    </div>
-                  </div>
-                </div>
-                <!-- / End Button trigger modal -->
               </div>
               <!-- End Proyecto Item -->
               <!-- Proyecto Item-->
               <div class="col-lg-4 col-md-6 portfolio-item">
-                <div
-                  class="portfolio-img"
-                  data-bs-toggle="modal"
-                  data-bs-target="#construin"
-                >
+                <div>
                   <!-- imagen portada portafolio -->
-                  <img
-                    src="assets/img/portfolio/construin-2.jpg"
-                    class="img-fluid portfolio-bw-color"
-                    alt=""
-                  />
+                  <a href="./portfolio/los-daners.html">
+                    <img
+                      src="assets/img/portfolio/los-daners-1.jpg"
+                      class="img-fluid portfolio-bw-color"
+                      alt="los daners sitio web"
+                    />
+                  </a>
                 </div>
 
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="construin"
-                  tabindex="-1"
-                  aria-labelledby="staticConstruinLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog modal-xl portfolio-modal">
-                    <div class="modal-content h-100">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticConstruinLabel">
-                          Developer
-                        </h1>
-                        <button
-                          type="button"
-                          class="btn-close"
-                          data-bs-dismiss="modal"
-                          aria-label="Close"
-                        ></button>
-                      </div>
-                      <div class="modal-body">
-                        <iframe
-                          src="https://losdaners.flatlatte.com/"
-                          class="example-website"
-                          frameborder="0"
-                          allowfullscreen
-                        ></iframe>
-                      </div>
-                      <div class="modal-footer"></div>
-                    </div>
-                  </div>
-                </div>
-                <!-- / End Button trigger modal -->
               </div>
               <!-- End Proyecto Item -->
             </div>
