--- a/portfolio/himnapp.html
+++ b/portfolio/himnapp.html
@@ -26,7 +26,7 @@
     <!-- CSS Files -->
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
-    <link href="a../ssets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="../assets/css/style.css" rel="stylesheet" />
   </head>
 
