--- a/portfolio/los-daners.html
+++ b/portfolio/los-daners.html
@@ -26,7 +26,7 @@
     <!-- CSS Files -->
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
-    <link href="a../ssets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="../assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -35,7 +35,7 @@
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
+        <a href="../index.html" class="logo d-flex align-items-center">
           <img src="../assets/img/logo-black-a.png" alt="logo flat latte mug" />
         </a>
 
