--- a/portfolio/swmonse.html
+++ b/portfolio/swmonse.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Fonts -->
@@ -59,18 +59,16 @@
         </div>
       </div>
       <!-- End Page Title -->
-      
+
       <!-- portfolio page Section -->
       <section id="portfolio-page" class="portfolio-page section">
         <div class="container" data-aos="fade">
-    
           <iframe
-          src="https://www.spanishwithmonse.com/"
-          class="example-website"
-          frameborder="0"
-          allowfullscreen
-        ></iframe>
-
+            src="https://www.spanishwithmonse.com/"
+            class="example-website"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
         </div>
       </section>
       <!-- /Contact Section -->
