--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <div class="row gy-4" data-aos="fade-right" data-aos-delay="200">
               <div class="col-lg-4 col-md-6 portfolio-item">
                 <!-- Proyecto Item-->
-                <div>
+                <div class="portfolio-img">
                   <!-- imagen portada portafolio -->
                   <a href="./portfolio/swmonse.html">
                     <img
@@ -408,7 +408,7 @@
               <!-- End Proyecto Item -->
               <!-- Proyecto Item-->
               <div class="col-lg-4 col-md-6 portfolio-item">
-                <div>
+                <div class="portfolio-img">
                   <!-- imagen portada portafolio -->
                   <a href="./portfolio/himnapp.html">
                     <img
@@ -422,7 +422,7 @@
               <!-- End Proyecto Item -->
               <!-- Proyecto Item-->
               <div class="col-lg-4 col-md-6 portfolio-item">
-                <div>
+                <div class="portfolio-img">
                   <!-- imagen portada portafolio -->
                   <a href="./portfolio/los-daners.html">
                     <img
