--- a/portfolio/swmonse.html
+++ b/portfolio/swmonse.html
@@ -46,19 +46,6 @@
     </header>
 
     <main class="main">
-      <!-- Page Title -->
-      <div class="page-title light-background">
-        <div class="container">
-          <!-- <h1>Spanish with Monse</h1> -->
-          <nav class="breadcrumbs">
-            <ol>
-              <li><a href="../index.html#portfolio">Regresar</a></li>
-              <!-- <li class="current">Contact</li> -->
-            </ol>
-          </nav>
-        </div>
-      </div>
-      <!-- End Page Title -->
 
       <!-- portfolio page Section -->
       <section id="portfolio-page" class="portfolio-page section">
@@ -71,7 +58,19 @@
           ></iframe>
         </div>
       </section>
-      <!-- /Contact Section -->
+      
+      <!-- Page Title -->
+      <div class="page-title light-background">
+        <div class="container">
+          <!-- <h1>Spanish with Monse/h1> -->
+          <nav class="breadcrumbs">
+            <ol>
+              <li><a href="../index.html#portfolio"><i class="bi bi-arrow-return-left"></i> Regresar</a></li>
+            </ol>
+          </nav>
+        </div>
+      </div>
+      <!-- End Page Title -->
     </main>
 
     <footer id="footer" class="footer-portfolio light-background">
