--- a/agenda-llamada.html
+++ b/agenda-llamada.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="" />
 
     <!-- Favicons -->
-    <link href="/favicon/favicon.ico" rel="icon">
-    <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/favicon/favicon.ico" rel="icon" />
+    <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -19,21 +19,15 @@
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files -->
+    <!-- libs CSS Files -->
+    <link href="assets/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="assets/libs/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
+    <link href="assets/libs/aos/aos.css" rel="stylesheet" />
+    <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="assets/libs/glightbox/css/glightbox.min.css" rel="stylesheet" />
 
     <!-- Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -41,16 +35,17 @@
 
   <body class="contact-page">
     <header id="header" class="header d-flex align-items-center sticky-top">
-      <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-  
+      <div
+        class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"
+      >
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="./assets/img/logo-black-a.png" alt="logo flat latte mug">
+          <img src="./assets/img/logo-black-a.png" alt="logo flat latte mug" />
         </a>
-  
+
         <!-- <a href="index.html" class="logo d-flex align-items-center">
           <p class="sitename">Born in curiosity, raised by dedication.</p>
         </a> -->
-  
+
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="socio-fl.html" class="">Socio FL</a></li>
@@ -59,7 +54,6 @@
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
-  
       </div>
     </header>
 
@@ -80,14 +74,20 @@
       <!-- Calendly Section -->
       <section>
         <!-- Principio del widget integrado de Calendly -->
-        <div 
-        class="calendly-inline-widget" 
-        data-url="https://calendly.com/flatlatte/hablemos-de-tu-proyecto?primary_color=5d6062" style="min-width:320px;height:100vh;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <div
+          class="calendly-inline-widget"
+          data-url="https://calendly.com/flatlatte/hablemos-de-tu-proyecto?primary_color=5d6062"
+          style="min-width: 320px; height: 100vh"
+        ></div>
+        <script
+          type="text/javascript"
+          src="https://assets.calendly.com/assets/external/widget.js"
+          async
+        ></script>
         <!-- Final del widget integrado de Calendly -->
       </section>
       <!-- /Calendly Section -->
-      
+
       <!-- Contact Section -->
       <section id="contact" class="contact section">
         <div class="container" data-aos="fade">
@@ -324,17 +324,17 @@
     <!-- Preloader -->
     <div id="preloader"></div>
 
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <!-- libs JS Files -->
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/libs/php-email-form/validate.js"></script>
+    <script src="assets/libs/aos/aos.js"></script>
+    <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/libs/purecounter/purecounter_vanilla.js"></script>
+    <script src="assets/libs/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/libs/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="assets/libs/isotope-layout/isotope.pkgd.min.js"></script>
 
     <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
