--- a/contact-enviado.html
+++ b/contact-enviado.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Himnapp</title>
+    <title>Contacto Flat Latte Desarrollo Web para Creativos</title>
     <meta
       name="description"
       content="Desarrollo Web para Emprendedores Creativos y Artistas"
@@ -26,16 +26,13 @@
     />
 
     <!-- CSS Files -->
+    <link href="assets/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link
-      href="../assets/libs/bootstrap/css/bootstrap.min.css"
+      href="assets/libs/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link
-      href="../assets/libs/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="../assets/libs/aos/aos.css" rel="stylesheet" />
-    <link href="../assets/css/style.css" rel="stylesheet" />
+    <link href="assets/libs/aos/aos.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body class="contact-page">
@@ -43,48 +40,55 @@
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"
       >
-        <a href="../index.html" class="logo d-flex align-items-center">
-          <img src="../assets/img/logo-black-a.png" alt="logo flat latte mug" />
+        <a href="index.html" class="logo d-flex align-items-center">
+          <img src="./assets/img/logo-black-a.png" alt="logo flat latte mug" />
         </a>
 
         <div class="navmenu">
-          <a class="btn-nav px-0" href="../contact.html">Un café y hablamos</a>
+          <a class="btn-nav px-0" href="index.html">flat latte</a>
         </div>
       </div>
     </header>
 
     <main class="main">
-      <!-- portfolio page Section -->
-      <section id="portfolio-page" class="portfolio-page section">
+      <!-- Contact Section -->
+      <section id="contact" class="contact section">
         <div class="container" data-aos="fade">
-          <iframe
-            src="https://vianydev.github.io/himnapp/"
-            class="example-website-fixed"
-            frameborder="0"
-            allowfullscreen
-          ></iframe>
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-10 text-center">
+              <div class="mb-5">
+                <h1>Gracias por tu mensaje!👍</h1>
+                <h2>Te responderemos pronto. </h2>
+                
+              </div>
+             
+            </div>
+
+            <div class="col-12 col-lg-8 mt-5">
+              <div class="text-center">
+                <h2 class="mb-4">¿Prefieres algo más rápido?</h2>
+                <div>
+                  <a
+                    class="btn-get-started d-inline-flex justify-content-center align-items-center"
+                    href="https://wa.me/529223400366?text=¡Hola%21+Me+gustaría+obtener+más+información+sobre+Flat+Latte.&"
+                    target="_blank"
+                  >
+                    <i class="bi bi-whatsapp me-2 fs-3"></i>
+                    <span class="d-flex d-sm-none">WhatsApp</span>
+                    <span class="d-none d-sm-block"
+                      >Escríbeme por WhatsApp</span
+                    >
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-
-      <!-- Page Title -->
-      <div class="page-title light-background">
-        <div class="container">
-          <!-- <h1>Himnapp</h1> -->
-          <nav class="breadcrumbs">
-            <ol>
-              <li>
-                <a href="../index.html#portfolio"
-                  ><i class="bi bi-arrow-return-left"></i> Regresar</a
-                >
-              </li>
-            </ol>
-          </nav>
-        </div>
-      </div>
-      <!-- End Page Title -->
+      <!-- /Contact Section -->
     </main>
 
-    <footer id="footer" class="footer-portfolio light-background">
+    <footer id="footer" class="footer light-background">
       <div class="container">
         <div class="text-center">
           <p>Hecho con café y código.</p>
@@ -128,8 +132,8 @@
     <div id="preloader"></div>
 
     <!-- JS Files -->
-    <script src="../assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/libs/aos/aos.js"></script>
-    <script src="../assets/js/script.js"></script>
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/libs/aos/aos.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
