--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
       content="Desarrollo Web Emprendedores Creativos Artistas Musicos Diseñadores"
     />
 
-    <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
 
-    <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
     />
 
-    <!-- CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="assets/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link
+      href="assets/libs/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/libs/aos/aos.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -281,7 +283,9 @@
                       <div>
                         <p class="fw-semibold mb-1">Socio Flat Latte</p>
                         <p>
-                          Ayudamos a integrar el desarrollo web a tus servicios o a crear nuevas oportunidades sin preocuparte por lo técnico.
+                          Ayudamos a integrar el desarrollo web a tus servicios
+                          o a crear nuevas oportunidades sin preocuparte por lo
+                          técnico.
                         </p>
                       </div>
                     </div>
@@ -321,9 +325,7 @@
                   <i class="bi bi-check2-circle"></i>
                 </div>
                 <div>
-                  <p class="mb-1">
-                    Un sitio web que refleja confianza.
-                  </p>
+                  <p class="mb-1">Un sitio web que refleja confianza.</p>
                 </div>
               </div>
 
@@ -351,9 +353,7 @@
                   <i class="bi bi-check2-circle"></i>
                 </div>
                 <div>
-                  <p class="mb-1">
-                    Soporte técnico cuando lo necesites.
-                  </p>
+                  <p class="mb-1">Soporte técnico cuando lo necesites.</p>
                 </div>
               </div>
 
@@ -432,7 +432,6 @@
                     />
                   </a>
                 </div>
-
               </div>
               <!-- End Proyecto Item -->
             </div>
@@ -581,7 +580,11 @@
                     data-parent="#accordion-faq"
                   >
                     <div class="accordion-body">
-                      Nos encargamos de las actualizaciones, la seguridad, la resolución de problemas y los ajustes técnicos para que tu sitio funcione sin interrupciones. También podemos ser tu equipo de IT y ayudarte con temas técnicos más allá del sitio web.
+                      Nos encargamos de las actualizaciones, la seguridad, la
+                      resolución de problemas y los ajustes técnicos para que tu
+                      sitio funcione sin interrupciones. También podemos ser tu
+                      equipo de IT y ayudarte con temas técnicos más allá del
+                      sitio web.
                     </div>
                   </div>
                 </div>
@@ -873,9 +876,8 @@
     <!-- Preloader -->
     <div id="preloader"></div>
 
-    <!-- JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/libs/aos/aos.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
