--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,12 @@
     />
 
     <!-- CSS Files -->
+    <link href="assets/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="assets/libs/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="assets/libs/aos/aos.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -71,6 +68,7 @@
                   action="https://formspree.io/f/mzzdjwqv"
                   method="POST"
                   role="form"
+                  class="email-form"
                 >
                   <div class="row">
                     <div class="col-lg-6 form-group">
@@ -107,6 +105,9 @@
                     <button class="btn-fill" type="submit">Enviar</button>
                   </div>
                 </form>
+                <div id="mensaje-enviado" class="hidden">
+                  <p>¡Gracias por tu mensaje! Te responderemos pronto.</p>
+                </div>
               </div>
             </div>
 
@@ -178,8 +179,8 @@
     <div id="preloader"></div>
 
     <!-- JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/libs/aos/aos.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
