--- a/portfolio.html
+++ b/portfolio.html
@@ -19,21 +19,15 @@
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files -->
+    <!-- libs CSS Files -->
+    <link href="assets/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="assets/libs/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
+    <link href="assets/libs/aos/aos.css" rel="stylesheet" />
+    <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="assets/libs/glightbox/css/glightbox.min.css" rel="stylesheet" />
 
     <!-- Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -625,17 +619,17 @@
     <!-- Preloader -->
     <div id="preloader"></div>
 
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <!-- libs JS Files -->
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/libs/php-email-form/validate.js"></script>
+    <script src="assets/libs/aos/aos.js"></script>
+    <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/libs/purecounter/purecounter_vanilla.js"></script>
+    <script src="assets/libs/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/libs/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="assets/libs/isotope-layout/isotope.pkgd.min.js"></script>
 
     <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
