--- a/portfolio/los-daners.html
+++ b/portfolio/los-daners.html
@@ -14,19 +14,27 @@
     />
 
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
     />
 
     <!-- CSS Files -->
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="../assets/libs/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/libs/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="../assets/libs/aos/aos.css" rel="stylesheet" />
     <link href="../assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -46,18 +54,15 @@
     </header>
 
     <main class="main">
-      
       <!-- portfolio page Section -->
       <section id="portfolio-page" class="portfolio-page section">
         <div class="container" data-aos="fade">
-    
           <iframe
             src="https://losdaners.flatlatte.com/"
             class="example-website"
             frameborder="0"
             allowfullscreen
-        ></iframe>
-
+          ></iframe>
         </div>
       </section>
 
@@ -67,7 +72,11 @@
           <!-- <h1>Los daners</h1> -->
           <nav class="breadcrumbs">
             <ol>
-              <li><a href="../index.html#portfolio"><i class="bi bi-arrow-return-left"></i> Regresar</a></li>
+              <li>
+                <a href="../index.html#portfolio"
+                  ><i class="bi bi-arrow-return-left"></i> Regresar</a
+                >
+              </li>
             </ol>
           </nav>
         </div>
@@ -119,8 +128,8 @@
     <div id="preloader"></div>
 
     <!-- JS Files -->
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/aos/aos.js"></script>
+    <script src="../assets/js/script.js"></script>
   </body>
 </html>
