--- a/portfolio/swmonse.html
+++ b/portfolio/swmonse.html
@@ -20,13 +20,21 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
     />
 
     <!-- CSS Files -->
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="../assets/libs/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/libs/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="../assets/libs/aos/aos.css" rel="stylesheet" />
     <link href="../assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -46,7 +54,6 @@
     </header>
 
     <main class="main">
-
       <!-- portfolio page Section -->
       <section id="portfolio-page" class="portfolio-page section">
         <div class="container" data-aos="fade">
@@ -58,14 +65,18 @@
           ></iframe>
         </div>
       </section>
-      
+
       <!-- Page Title -->
       <div class="page-title light-background">
         <div class="container">
           <!-- <h1>Spanish with Monse/h1> -->
           <nav class="breadcrumbs">
             <ol>
-              <li><a href="../index.html#portfolio"><i class="bi bi-arrow-return-left"></i> Regresar</a></li>
+              <li>
+                <a href="../index.html#portfolio"
+                  ><i class="bi bi-arrow-return-left"></i> Regresar</a
+                >
+              </li>
             </ol>
           </nav>
         </div>
@@ -117,8 +128,8 @@
     <div id="preloader"></div>
 
     <!-- JS Files -->
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/aos/aos.js"></script>
+    <script src="../assets/js/script.js"></script>
   </body>
 </html>
